Fixed problem for CSR storage, clear and purge caused inconsistent storage data.

--- a/scai/lama/test/storage/CMakeLists.txt
+++ b/scai/lama/test/storage/CMakeLists.txt
@@ -1,5 +1,5 @@
 ###
- # @file scai/lama/test/CMakeLists.txt
+ # @file scai/lama/test/storage/CMakeLists.txt
  #
  # @license
  # Copyright (c) 2009-2015
@@ -25,58 +25,26 @@
  # SOFTWARE.
  # @endlicense
  #
- # @brief scai/lama/test/CMakeLists.txt
+ # @brief Build configuration for test of LAMA storage classes
  # @author Jan Ecker
  # @date 03.04.2013
  # @since 1.0.0
 ###
 
-### set this dir as lama source dir ###
-
 scai_project ( 
 
     CLASSES
-
-       # Configuration
-        MatrixStorageTest
-        NormTest
-        SparseMatrixHelper
-        SparseMatrixTest
-        TestContext
     
     HEADERS
-        
-        SameMatrixHelper
-        EquationHelper
-        TestMacros
-        TestSparseMatrices
 
+        Storages
+        
     SOURCES
 
-        COOSparseMatrixTest
-        COOStorageTest
-        CSRSparseMatrixTest
-        CSRStorageTest
-        DenseMatrixTest
-        DenseMatrixTest1
-        DenseStorageTest
-        DerivedSparseMatrixTest
-        DIASparseMatrixTest
-        DIAStorageTest
-        ELLSparseMatrixTest
-        ELLStorageTest
-        JDSSparseMatrixTest
-        JDSStorageTest
-        L1NormTest
-        L2NormTest
-        MatrixNormTest
-        MatrixStorageConversionTest
-        MatrixTest
-        MaxNormTest
-        ScalarTest
-        SparseAssemblyStorageTest
-        StorageIOTest
-        VectorTest
+        AllStorageTest
+        TypedStorageTest
+
+        lamaStorageTest
     )
 
 ### checks ####
@@ -87,22 +55,6 @@ endif ( ${SCAI_ASSERT_LEVEL} STREQUAL "OFF" )
 ### set include directories ###
 include_directories ( ${SCAI_BOOST_INCLUDE_DIR} )
 
-if ( SCAI_BLAS_NAME STREQUAL "MKL" )
-    include_directories ( ${MKL_INCLUDE_DIRS} )
-endif ( SCAI_BLAS_NAME STREQUAL "MKL" )
-
-### add subdirectories ###
-
-add_subdirectory ( storage )
-
-if ( MPI_FOUND AND USE_MPI )
-    add_subdirectory ( distributed )
-endif ( MPI_FOUND AND USE_MPI )
-
-if ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
-    add_subdirectory ( cuda )
-endif ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
- 
 ### add definitions ###
 add_definitions ( -DLAMA_TESTFILE_PATH="${CMAKE_CURRENT_SOURCE_DIR}/../../../res/testfiles" )
 
@@ -112,19 +64,11 @@ if ( WIN32 )
 endif ( WIN32 )
 
 ### add executeable ###
-add_executable ( lamaTest lamaTest.cpp ${CXX_SOURCES} )
+add_executable ( lamaStorageTest ${CXX_SOURCES} )
 
 ### target link libraries ###
 if ( WIN32 )
-    target_link_libraries ( lamaTest ${PROJECT_NAME} )
+    target_link_libraries ( lamaStorageTest ${PROJECT_NAME} )
 else ( WIN32 )
-    target_link_libraries ( lamaTest ${PROJECT_NAME} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} )
+    target_link_libraries ( lamaStorageTest ${PROJECT_NAME} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} )
 endif ( WIN32 )
-
-### Copy the README and xmltest.sh file in build directory ### 
-file ( COPY README DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
-file ( COPY xmltest.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR} ) 
-
-if ( USE_CODE_COVERAGE )
-    configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/code_coverage.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/code_coverage.sh" @ONLY)
-endif ( USE_CODE_COVERAGE )
