Changes for Release build

--- a/scai/common/mepr/CMakeLists.txt
+++ b/scai/common/mepr/CMakeLists.txt
@@ -35,9 +35,10 @@ scai_project(
     HEADERS
 
         ScalarTypeHelper
-        TemplateSpecifier
         TypeList
 
+    CLASSES
+        TemplateSpecifier
 
     ADD_PARENT_SCOPE
 )
