Separated all Format specific storage tests, no complex macros for it, fixed some problems due to new tests.

--- a/scai/lama/test/storage/CMakeLists.txt
+++ b/scai/lama/test/storage/CMakeLists.txt
@@ -44,6 +44,14 @@ scai_project (
         AllStorageTest
         TypedStorageTest
 
+        COOStorageTest
+        CSRStorageTest
+        ELLStorageTest
+        DIAStorageTest
+        JDSStorageTest
+        SparseAssemblyStorageTest
+        DenseStorageTest
+
         lamaStorageTest
     )
 
