tracing/test: BOOST_INCLUDE_DIR added, fixed misspelling in test.sh script.

--- a/scai/tracing/test/Makefile
+++ b/scai/tracing/test/Makefile
@@ -33,7 +33,7 @@
 
 include make.inc
 
-INCLUDE_FLAGS = ${SCAI_INCLUDES}
+INCLUDE_FLAGS = ${SCAI_INCLUDES} -I${SCAI_BOOST_INCLUDE_DIR}
 
 CXX_FLAGS = ${SCAI_CXX_FLAGS}
 
