--- a/scai/tracing/test/make.inc.in
+++ b/scai/tracing/test/make.inc.in
@@ -31,6 +31,7 @@
  # @since 2.0.0
 ###
 
+SCAI_BOOST_INCLUDE_DIR=${SCAI_BOOST_INCLUDE_DIR}
 SCAI_INCLUDES= -I"${CMAKE_CURRENT_SOURCE_DIR}/../.." -I"${CMAKE_BINARY_DIR}/include" -I"${CMAKE_INSTALL_PREFIX}/include"
 SCAI_CXX_FLAGS=${CMAKE_CXX_FLAGS}
 SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} -L.. -L${CMAKE_INSTALL_PREFIX}/lib -Wl,-rpath=${CMAKE_INSTALL_PREFIX}/lib -lscai_tracing -lscai_logging -lscai_common
