Added example for benchmarking maxnorm

--- a/scai/lama/examples/bench/CMakeLists.txt
+++ b/scai/lama/examples/bench/CMakeLists.txt
@@ -30,7 +30,7 @@
  # @date 02.12.2015
 ###
 
-foreach ( executable conversion matadd matmul )
+foreach ( executable conversion matadd matmul maxnorm )
     add_executable( ${executable}.exe ${executable}.cpp )
     target_link_libraries( ${executable}.exe ${PROJECT_NAME} )
     set ( EXAMPLE_FILES ${EXAMPLE_FILES} ${executable}.cpp )
