--- a/scai/sparsekernel/examples/CMakeLists.txt
+++ b/scai/sparsekernel/examples/CMakeLists.txt
@@ -30,6 +30,8 @@
  # @date 28.01.2016
 ###
 
+message ( STATUS "sparsekernel ${PROJECT_EXAMPLE_DIR} file ${EXAMPLE_FILES}" )
+
 set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SCAI_LANG_FLAGS}" )
 
 if    ( OPENMP_FOUND AND USE_OPENMP )
@@ -38,7 +40,7 @@ endif ( OPENMP_FOUND AND USE_OPENMP )
  
 foreach ( executable matmulell )
     add_executable ( ${executable}.exe ${executable}.cpp )
-    target_link_libraries ( ${executable}.exe scai_sparsekernel )
+    target_link_libraries ( ${executable}.exe ${PROJECT_NAME} )
     set ( EXAMPLE_FILES ${EXAMPLE_FILES} ${executable}.cpp )
     set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
 endforeach ( executable )
