Some test cleanup, added test for TypeTraits.

--- a/scai/common/test/CMakeLists.txt
+++ b/scai/common/test/CMakeLists.txt
@@ -33,6 +33,7 @@
 set ( CXX_SOURCES
       commonTest.cpp
       FactoryTest.cpp  
+      TypeTraitsTest.cpp  
       SettingsTest.cpp  
       WalltimeTest.cpp  
 )
