--- a/scai/lama/test/matrix/CMakeLists.txt
+++ b/scai/lama/test/matrix/CMakeLists.txt
@@ -42,6 +42,9 @@ scai_project (
     SOURCES
 
         AllMatrixTest
+        Redistribution
+
+        CSRSparseMatrixTest
 
         lamaMatrixTest
     )
