mv DefaultJacobi to examples, rename SpecializedJacobi to Jacobi, removed SOR (because not parallized and only host

--- a/scai/solver/CMakeLists.txt
+++ b/scai/solver/CMakeLists.txt
@@ -108,20 +108,18 @@ scai_project (
         CGNE
         CGNR
         CGS
-        DefaultJacobi
         GMRES
         InverseSolver
         IterativeSolver
+        Jacobi
         MINRES
         OmegaSolver
         QMR
         Richardson
-        SOR
         SimpleAMG
         SingleGridSetup
         SolutionProxy
         Solver
-        SpecializedJacobi
         TFQMR
         TrivialPreconditioner
 
