--- a/scai/common/test/code_coverage.sh.in
+++ b/scai/common/test/code_coverage.sh.in
@@ -69,7 +69,7 @@ then
     ./commonCUDATest >/dev/null
     if [ $? -ne 0 ]
     then
-        echo "ERROR in commonCudaTest"
+        echo "ERROR in commonCUDATest"
         error_count=$(($error_count + $?))
     fi
     cd ..
