--- a/scai/tasking/test/code_coverage.sh.in
+++ b/scai/tasking/test/code_coverage.sh.in
@@ -54,11 +54,23 @@ export SCAI_TRACE=time
 	
 # Running tests serial
 echo "Running serial tests"
-./CommonTest >/dev/null
+./taskingTest >/dev/null
 if [ $? -ne 0 ]
 then
-	echo "ERROR in CommonTest"
+	echo "ERROR in taskingTest"
 	error_count=$(($error_count + $?))
+fi
+
+if [ -d cuda ];
+then
+    #Running common CUDA tests
+    echo "Running common CUDA tests"
+    ./cuda/taskingCUDATest >/dev/null
+    if [ $? -ne 0 ]
+    then
+        echo "ERROR in taskingCUDATest"
+        error_count=$(($error_count + $?))
+    fi
 fi
 
 cd ${dirname}
@@ -92,4 +104,4 @@ then
     exit 1
 fi
 
-zip -r ../coverage.zip *
+zip -r ../tasking_coverage.zip *
