--- a/scai/dmemo/test/code_coverage.sh.in
+++ b/scai/dmemo/test/code_coverage.sh.in
@@ -54,53 +54,29 @@ export SCAI_TRACE=time
 	
 # Running tests serial
 echo "Running serial tests"
-./lama_test >/dev/null
+./dmemoTest >/dev/null
 if [ $? -ne 0 ]
 then
-	echo "ERROR in lama_test"
+	echo "ERROR in dmemoTest"
 	error_count=$(($error_count + $?))
 fi
 
 if [ -d distributed ];
 then
-    # Running parallel tests serial and with two processes
-    cd distributed
-    echo "Running distributed tests serial"
-    ./lama_dist_test >/dev/null
-    if [ $? -ne 0 ]
-    then
-        echo "ERROR in lama_dist_test"
-        error_count=$(($error_count + $?))
-    fi
-
+    # Running parallel tests
     for i in 2 3 4;
     do
         echo "Running distributed tests with $i processes"
-        mpirun -np $i ./lama_dist_test >/dev/null
+        mpirun -np $i ./dmemoTest >/dev/null
         if [ $? -ne 0 ]
         then
-            echo "ERROR in lama_dist_test"
+            echo "ERROR in dmemoTest"
             error_count=$(($error_count + $?))
         fi
     done
     cd ..
 fi
     
-    
-if [ -d cuda ];
-then
-	#Running CUDA tests
-	cd cuda
-	echo "Running cuda tests"
-	./lama_cuda_test >/dev/null
-	if [ $? -ne 0 ]
-	then
-		echo "ERROR in lama_cuda_test"
-		error_count=$(($error_count + $?))
-	fi
-	cd ..
-fi
-
 cd ${dirname}
 
 #Running lcov and creating data
