correction for example_Makefile.in

--- a/scai/common/examples/CMakeLists.txt
+++ b/scai/common/examples/CMakeLists.txt
@@ -48,7 +48,7 @@ target_link_libraries( Module ${PROJECT_NAME} )
 add_library( DummyModule SHARED DummyModule.cpp )
 set ( EXAMPLE_FILES ${EXAMPLE_FILES} DummyModule.cpp )
 
-set ( EXAMPLE_MODULES "Module.so DummyModule.so" ) # for make.inc
+set ( EXAMPLE_MODULES "Module DummyModule" ) # for make.inc
 
 foreach ( executable ExceptionDemo CriticalRegion Barrier 
           DemoFactory DemoFactory1 DemoPointer UseModule TimePrecision 
@@ -75,9 +75,6 @@ configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../examples_make.inc.in" "${CMA
 ## install examples
 install ( FILES ${EXAMPLE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/make.inc DESTINATION ${PROJECT_EXAMPLE_DIR} )
 install ( PROGRAMS run_all.sh DESTINATION ${PROJECT_EXAMPLE_DIR} )
-
-message ( STATUS "CMAKE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}" )
-message ( STATUS "PROJECT_EXAMPLE_DIR ${PROJECT_EXAMPLE_DIR}" )
 
 # install Makefile
 configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../examples_Makefile.in"
