--- a/scai/examples_make.inc.in
+++ b/scai/examples_make.inc.in
@@ -47,5 +47,6 @@ SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib ${SCAI_EXAMPLE_LI
 
 SCAI_CUDA_LIBRARY_PATH=${SCAI_CUDA_LIBRARY_PATH}
 
-EXECUTABLES=${EXAMPLE_EXECUTABLES}
-MODULES=${EXAMPLE_MODULES}
+SCAI_EXECUTABLES=${EXAMPLE_EXECUTABLES}
+SCAI_MODULES=${EXAMPLE_MODULES}
+SCAI_LIBS=${EXAMPLE_LIBS}
