--- a/scai/examples_Makefile.in
+++ b/scai/examples_Makefile.in
@@ -14,15 +14,15 @@ ifdef ADDITIONAL_EXAMPLE_LINK_LIBRARIES
 	LINK_LIBRARY = -l${ADDITIONAL_EXAMPLE_LINK_LIBRARIES}
 endif
 
-ifdef MODULES
-	M_SO = $(foreach a, ${MODULES}, $(a).so )
-	M_LIBS = $(foreach a, ${MODULES}, -l$(a) )
+ifdef SCAI_LIBS
+	M_SO = $(foreach a, ${SCAI_LIBS}, $(a).so )
+	M_LIBS = $(foreach a, ${SCAI_LIBS}, -l$(a) )
 	MODULE_LIB = -L. ${M_LIBS}
 endif
 
 LD_FLAGS = ${SCAI_LD_FLAGS} ${LINK_LIBRARY} -Wl,-rpath=${SCAI_ROOT}/lib:${SCAI_CUDA_LIBRARY_PATH}
 
-All: ${M_SO} ${EXECUTABLES}
+All: ${M_SO} ${SCAI_EXECUTABLES} ${SCAI_MODULES}
 
 .SUFFIXES:
 
