fix example makefiles

--- a/scai/hmemo/examples/Makefile
+++ b/scai/hmemo/examples/Makefile
@@ -22,7 +22,7 @@ INCLUDE_FLAGS = -I${SCAI_BOOST_INCLUDE_DIR} -I${SCAI_ROOT}/include
 
 LD_FLAGS = ${SCAI_LD_FLAGS} -Wl,-rpath=${SCAI_ROOT}/lib 
 
-EXECUTABLE: ${EXECUTABLES}
+EXECUTABLE: ${SCAI_EXECUTABLES}
 
 .SUFFIXES:
 
