added scai_code_coverage_functions.sh for unique coverage functionality, adaptions to code_coverage.sh.in scripts

--- a/scai/CMakeLists.txt
+++ b/scai/CMakeLists.txt
@@ -297,3 +297,6 @@ configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/scai_test.sh"
 
 configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/scai_test_xml.sh"
                  "${CMAKE_CURRENT_BINARY_DIR}/" COPYONLY )
+
+configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/scai_code_coverage_functions.sh"
+                 "${CMAKE_CURRENT_BINARY_DIR}/" COPYONLY )
