--- a/scai/utilskernel/test/code_coverage.sh.in
+++ b/scai/utilskernel/test/code_coverage.sh.in
@@ -34,20 +34,9 @@
 
 #!/bin/bash
 
-error_count=0
+. ../../scai_code_coverage_functions.sh
 
-# Creating dir using current unix timestamp
-dirname=coverage_$(date +%s)
-echo "Create coverage directory: ${dirname}"
-mkdir ${dirname}
-
-
-# Clearing up environment
-cd ${dirname}
-lcov --base-directory ../.. --directory ../.. --zerocounters
-cd ..
-
-
+prepare_coverage
 
 export SCAI_LOG=TRACE
 export SCAI_TRACE=time
@@ -73,35 +62,6 @@ then
     fi
 fi
 
-cd ${dirname}
+do_coverage
 
-#Running lcov and creating data
-lcov --base-directory ../.. --directory ../.. --capture --output-file=data.info
-if [ $? -ne 0 ]
-then
-	echo "ERROR in running lcov"
-	error_count=$(($error_count + $?))
-fi
-
-#Extracting just Sourcefiles
-lcov --extract data.info "@CMAKE_SOURCE_DIR@/*" --output-file=data.info
-if [ $? -ne 0 ]
-then
-	echo "ERROR in extracting lcov data"
-	error_count=$(($error_count + $?))
-fi
-
-# Generating html-structure
-genhtml data.info
-if [ $? -ne 0 ]
-then
-	echo "ERROR in generating html-structure"
-	error_count=$(($error_count + $?))
-fi
-
-if [[ $error_count != 0 ]]
-then
-    exit 1
-fi
-
-zip -r ../coverage.zip *
+zip -r ../utilskernel_coverage.zip *
