--- a/scai/solver/test/code_coverage.sh.in
+++ b/scai/solver/test/code_coverage.sh.in
@@ -52,13 +52,15 @@ fi
     
 if [ -d distributed ];
 then    
-	echo "Running distributed tests"
+	echo "Running distributed tests serial"
 	./distributed/solverDistTest >/dev/null
 	if [ $? -ne 0 ]
 	then
 		echo "ERROR in solverDistTest"
 		error_count=$(($error_count + $?))
 	fi
+
+	//TODO: running solver tests distributed
 fi
 
 do_coverage
