--- a/scai/common/test/CMakeLists.txt
+++ b/scai/common/test/CMakeLists.txt
@@ -32,9 +32,8 @@
 
 set ( CXX_SOURCES
       commonTest.cpp
-      ComplexTest.cpp
       FactoryTest.cpp  
-      TypeTraitsTest.cpp  
+      Factory1Test.cpp  
       SettingsTest.cpp  
       WalltimeTest.cpp  
 )
@@ -59,3 +58,4 @@ file ( COPY xmltest.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
 if ( USE_CODE_COVERAGE )
     configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/code_coverage.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/code_coverage.sh" @ONLY)
 endif ( USE_CODE_COVERAGE )
+
