remove side effects from scai_code_coverage_functions.sh

--- a/scai/solver/test/code_coverage.sh.in
+++ b/scai/solver/test/code_coverage.sh.in
@@ -36,7 +36,10 @@
 
 . ../../scai_code_coverage_functions.sh
 
-prepare_coverage
+dirname=$(create_dir)
+echo "Create coverage directory: ${dirname}"
+
+prepare_coverage $dirname ../..
 
 export SCAI_LOG=TRACE
 export SCAI_TRACE=time
@@ -63,6 +66,11 @@ then
 	//TODO: running solver tests distributed
 fi
 
-do_coverage
+do_coverage "@CMAKE_SOURCE_DIR@/*"
+
+if [ $? == 1 ];
+then
+    exit 1
+fi
 
 zip -r ../solver_coverage.zip *
