--- a/scai/dmemo/test/code_coverage.sh.in
+++ b/scai/dmemo/test/code_coverage.sh.in
@@ -66,6 +66,11 @@ then
     cd ..
 fi
     
-do_coverage
+do_coverage "@CMAKE_SOURCE_DIR@/*"
+
+if [ $? == 1 ];
+then
+    exit 1
+fi
 
 zip -r ../dmemo_coverage.zip *
