--- a/scai/hmemo/test/code_coverage.sh.in
+++ b/scai/hmemo/test/code_coverage.sh.in
@@ -36,7 +36,10 @@
 
 . ../../scai_code_coverage_functions.sh
 
-prepare_coverage
+dirname=$(create_dir)
+echo "Create coverage directory: ${dirname}"
+
+prepare_coverage $dirname ../..
 
 export SCAI_LOG=TRACE
 export SCAI_TRACE=time
@@ -64,6 +67,11 @@ then
 	fi
 fi
 
-do_coverage
+do_coverage "@CMAKE_SOURCE_DIR@/*"
+
+if [ $? == 1 ];
+then
+    exit 1
+fi
 
 zip -r ../hmemo_coverage.zip *
