--- a/scai/hmemo/test/CMakeLists.txt
+++ b/scai/hmemo/test/CMakeLists.txt
@@ -63,4 +63,5 @@ file ( COPY README DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
 
 if ( USE_CODE_COVERAGE )
     configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/code_coverage.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/code_coverage.sh" @ONLY)
+    configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/../../scai_code_coverage_functions.sh" "${CMAKE_CURRENT_BINARY_DIR}/" @ONLY)
 endif ( USE_CODE_COVERAGE )
