--- a/scai/hmemo/test/code_coverage.sh.in
+++ b/scai/hmemo/test/code_coverage.sh.in
@@ -34,7 +34,7 @@
 
 #!/bin/bash
 
-. ../../scai_code_coverage_functions.sh
+. scai_code_coverage_functions.sh
 
 dirname=$(create_dir)
 echo "Create coverage directory: ${dirname}"
