--- a/scai/solver/test/code_coverage.sh.in
+++ b/scai/solver/test/code_coverage.sh.in
@@ -66,7 +66,7 @@ then
 	//TODO: running solver tests distributed
 fi
 
-do_coverage "@CMAKE_SOURCE_DIR@/*"
+do_coverage "@CMAKE_SOURCE_DIR@"
 
 if [ $? == 1 ];
 then
