adaptions in code_coverage.sh.in

--- a/scai/kregistry/test/code_coverage.sh.in
+++ b/scai/kregistry/test/code_coverage.sh.in
@@ -53,7 +53,7 @@ then
 	error_count=$(($error_count + $?))
 fi
 
-do_coverage "@CMAKE_SOURCE_DIR@"
+do_coverage $dirname ../.. "@CMAKE_SOURCE_DIR@"
 
 if [ $? == 1 ];
 then
