added missing change for code_coverage.sh.in

--- a/scai/dmemo/test/code_coverage.sh.in
+++ b/scai/dmemo/test/code_coverage.sh.in
@@ -36,7 +36,7 @@
 
 . scai_code_coverage_functions.sh
 
-prepare_coverage
+prepare_coverage $dirname ../..
 
 export SCAI_LOG=TRACE
 export SCAI_TRACE=time
