Some more testing for CUDA in common

--- a/scai/common/test/cuda/CMakeLists.txt
+++ b/scai/common/test/cuda/CMakeLists.txt
@@ -37,6 +37,7 @@ scai_project (
         commonCUDATest
         CUDAAccessTest
         CUDADeviceTest
+        CUDASettingsTest
  
     CUDA_SOURCES
 
