--- a/scai/blaskernel/CMakeLists.txt
+++ b/scai/blaskernel/CMakeLists.txt
@@ -75,6 +75,7 @@ addInternalAndExternalPackages()
 
 ### finalize build flags
 include ( ConcludeFlags )
+include ( SetCacheVariableTexts )
 
 ### add definitions
 add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
