--- a/scai/dmemo/CMakeLists.txt
+++ b/scai/dmemo/CMakeLists.txt
@@ -73,6 +73,7 @@ addInternalAndExternalPackages()
 
 ## finalize build flags
 include ( ConcludeFlags )
+include ( SetCacheVariableTexts )
 
 ### add definitions ###
 add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
