--- a/scai/common/CMakeLists.txt
+++ b/scai/common/CMakeLists.txt
@@ -178,7 +178,7 @@ relative_install ( FILES ${CXX_HEADERS} DESTINATION ${${UPPER_PROJECT_NAME}_INCL
 install ( FILES ../${PROJECT_SURNAME}.hpp DESTINATION include/scai )
 
 ### add custum target distClean
-include ( DistClean )
+include ( CustomCommands/DistClean )
 
 ### summary ###
 if    ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
